<resources>
    <string name="app_name">陈凯的Jetpack</string>

    <string name="home_tab_0_title">首页</string>

    <string name="home_tab_1_title">车库</string>

    <string name="home_tab_2_title">资讯</string>

    <string name="home_tab_3_title">我的</string>

    <string name="home_check_more"><u>查看更多</u></string>

    <string name="version_name">版本%1$s</string>

    <string name="price_text">¥%1$s元/天</string>

    <plurals name="price_text">
        <item quantity="other">¥%1$s元/天</item>
    </plurals>

    <string name="contact_us_24_hot_line">400-6133337</string>

    <string name="vip_silver_icon1">会员充值金额</string>
    <string name="vip_silver_icon2">会员费可退</string>
    <string name="vip_silver_icon3">租车9.5折</string>
    <string name="vip_silver_icon4">免定金</string>
    <string name="vip_silver_icon5">免费送车上门</string>
    <string name="vip_silver_icon6">随意油量还车</string>
    <string name="vip_silver_icon7">每日可行驶标准公里延长60km</string>
    <string name="vip_silver_icon8">生日当日免费用车1次(会员需满一年)</string>
    <string name="vip_silver_icon9">指定俱乐部门店所在地高级餐厅及酒店预定、优惠券和礼物</string>

    <string name="vip_normal">普通会员</string>
    <string name="vip_silver">白银会员</string>
    <string name="vip_gold">黄金会员</string>
    <string name="vip_platinum">铂金会员</string>
    <string name="vip_black_gold">黑金会员</string>


    <string name="vip_gold_icon3">租车8.8折</string>
    <string name="vip_gold_icon7">每日可行驶标准公里延长130km</string>
    <string name="vip_gold_icon8">生日当日免费用车2次(会员需满一年)</string>

    <string name="vip_platinum_icon3">租车7.8折</string>
    <string name="vip_platinum_icon7">每日可行驶标准公里延长300km</string>
    <string name="vip_platinum_icon8">生日当日免费用车5次(会员需满一年)</string>

    <string name="vip_black_gold_icon2">会员费不可退</string>
    <string name="vip_black_gold_icon3">租车免费</string>
    <string name="vip_black_gold_icon7">每日可行驶标准公里任意里程</string>
    <string name="vip_black_gold_icon8">生日当日免费用车(会员需满一年)</string>

    <string name="car_detail_service_title_1">应有尽有想你所想</string>
    <string name="car_detail_service_content_1">豪车数量200+全国最多，只有你想不到的，没有租不到的。</string>
    <string name="car_detail_service_title_2">贴心服务无微不至</string>
    <string name="car_detail_service_content_2">7*24h全年无休，专业客服，在线等撩。</string>
    <string name="car_detail_service_title_3">宾至如归送车上门</string>
    <string name="car_detail_service_content_3">门店覆盖全国100多个地区，一个电话豪车送到你手中。</string>
    <string name="car_detail_service_title_4">价格冰点全网最低</string>
    <string name="car_detail_service_content_4">全新或三年内九成新的高端豪车，超低租车价，不信点进来看！</string>
    <string name="car_detail_service_title_5">异地还车省心更放心</string>
    <string name="car_detail_service_content_5">自驾全国，异地还车，省心更放心。</string>

    <string name="car_detail_tab1_title1">燃油 | 95#</string>
    <string name="car_detail_tab1_title2">百公里加速 | 3.7s</string>
    <string name="car_detail_tab1_title3">发动机 | 5.2L</string>
    <string name="car_detail_tab1_title4">非敞篷</string>
    <string name="car_detail_tab1_title5">最高时速 | 327km/h</string>
    <string name="car_detail_tab1_title6">座椅 | 4个</string>
    <string name="car_detail_tab1_title7">最大马力 | 559Ps</string>
    <string name="car_detail_tab1_title8">排量 | 6.0</string>
    <string name="car_detail_tab1_title9">自动挡</string>

    <string name="car_detail_tab2_title1">选择座驾</string>
    <string name="car_detail_tab2_title2">提交订单</string>
    <string name="car_detail_tab2_title3">支付定金/租金</string>
    <string name="car_detail_tab2_title4">支付尾款</string>
    <string name="car_detail_tab2_title5">签订协议</string>
    <string name="car_detail_tab2_title6">交车验车</string>
    <string name="car_detail_tab2_title7">退还车损押金</string>
    <string name="car_detail_tab2_title8">退还违章押金</string>

    <string name="online_pay_dialog_tips">您好，车辆安排时间按照距离来计算，以浙江为中心1000公里范围内，24小时内可安排车辆；1000公里到2000公里范围内，48小时内可安排车辆。感谢您的选择，我们将为您提供尊享的服务。</string>
    <string name="login_has_read">我已阅读并同意</string>
    <string name="login_contract"><u>《新威风出行租车协议》</u></string>
    <string name="login_contract2"><u>《用户协议和隐私》</u></string>
    <string name="pay_contract"><u> 新威风出行协议 </u></string>

    <string name="contract_a_text1">甲方负责提供给您的车辆状况良好，车辆行驶证真实有效。具体车辆信息详见《租车交接单》。</string>
    <string name="contract_a_text2">甲方应在出车前进行检查保证车辆处于正常行驶状态，保持车容整洁，并为车辆办理常规保险。</string>
    <string name="contract_a_text3">在用车期间若因乙方原因造成的损害，乙方已交的租金不予退还，且甲方有权就车辆损坏后果向乙方索赔，有权以此为由扣留租赁车辆押金直至纠纷解决。</string>
    <string name="contract_a_text4">甲方不承担所租车辆在乙方使用期间引发的任何第三者责任与其他民事、行政、刑事 等责任。</string>
    <string name="contract_a_text5">甲方有权按时收取租金，有权以乙方的押金和其他抵押物抵缴租金和车辆损坏缺件、交通事故或其他事故保险理赔不足部分的赔偿，押金抵扣后不足的部分，甲方有权力向乙方继续追偿。</string>
    <string name="contract_a_text6">用车期间若乙方有违约行为，甲方有权利没收乙方保证金或将质押物折价变卖，同时，甲方有权解除合同并强制收回租赁车辆。</string>

    <string name="contract_b_text1">乙方提供给甲方的身份材料应保证真实有效(含租车人、担保人身份证或营业执照、 户口本、驾驶证等)，甲方予以复印留存。如该材料有虚假、变造、伪造的，视为乙方违约，甲方有权视情节决定是否单方面解除合同，无需经乙方同意收回车辆，所交租金不予退还，所产生的其他法律后果由乙方承担。</string>
    <string name="contract_b_text2">租赁车辆仅限持有有效期驾驶证的乙方驾驶员本人驾驶同时应遵守有关道路交通安全的法律法规。</string>
    <string name="contract_b_text3">乙方必须妥善保管，正确使用操作租赁车辆，如发生租赁车辆遗失、被盗或者因使用操作不当造成车辆损坏的均由乙方承担全部赔偿责任。</string>
    <string name="contract_b_text4">乙方在租赁期间不得将车辆转租、转借、出售或抵押等其他任何侵犯车辆所有权的行为。违者或超期使用租赁车辆七天，拒不归还且失去联系的，均视为乙方指定驾驶员利用合同诈骗车辆，甲方可以向公安部门报案处理。</string>
    <string name="contract_b_text5">乙方指定驾驶员不得利用租赁车辆进行载客运输，不得携带易燃、易爆易腐蚀等危险品。</string>
    <string name="contract_b_text6">乙方不得私自拆除，更换本租赁车辆的任何设施，违者按拆除更换部件价值的双倍赔偿。</string>
    <string name="contract_b_text7">如乙方丢失或者拒绝还本租赁车辆的钥匙，由乙方双倍赔偿所租车辆门锁和点火开关总成的损失。</string>
    <string name="contract_b_text8">乙方应在还车时向出租方付清全部租金，若乙方逾期支付租金，每逾期一天按租金总额的0.5%支付违约金，燃油费等其他费用由乙方自理。</string>

    <string name="contract_text">请认真阅读本协议相关事项，提交订单后会有相关工作人员第一时间与您联系。祝您用车愉快~</string>

    <string name="about1">新威风出行是一家专业的豪车租赁公司，于2015年4月份在杭州成立。公司自主研发“威风超跑”APP为主要租赁平台，用户通过APP或公众号预览车辆、预定、付款、取车、还车等一系列规范流程，满足豪车出行的需求。</string>
    <string name="about2">从2015年4月份成立至今，凭借专业优质的服务逐渐占领市场，如今已成为全国车辆最多的豪车租赁公司，拥有包括兰博基尼、法拉利、迈凯伦、劳斯莱斯、保时捷、玛莎拉蒂、宾利、路虎、奥迪、奔驰、宝马、特斯拉、品牌限量车等可调配高端车型400多辆，覆盖北京、上海、广州浙江、湖北、湖南、安徽、深圳、广东、江西、福建、江苏等9个省份30多个服务网点，支持全国100多个地区车辆送车上门，9大省份异地还车等优质服务，一跃成为行业领先品牌。</string>
    <string name="about3">根据用户场景不同，新威风超跑建立以自驾为主、商务接送、婚庆用车为辅的多种商务模式。自驾出行根据租赁时长的不同，分为长租与短租，长租则可享受更规范的价格优惠。平台还根据客户的自驾需求，提供全国送车上门、高端餐厅酒店预订、全程私人用车管家等服务，商务接送、婚庆用车则是提供专业司机的配备。</string>
    <string name="about4">除自有车辆外，新威风超跑还与全国各地的大小豪车租赁公司合作，提供从50万至100万的商务、跑车等各类高端车型。车辆经过严格的筛选，确保品质。用户可以通过“新威风超跑”APP或公众号完成车辆预定、下单、付款等所有交易操作。为保证更好的提高服务效率和品质，新微风超跑通过独有的车管系统，能够实现异地还车，跨越区域调车将客户需求与车辆管理良好的结合，更好的满足客户需求并降低车辆闲置率。除此之外，平台还研发了全面的客户评估体系，包括公安系统、车辆管理系统、银联信用系统、互联网征信系统、反欺诈公司的大数据支撑等，还有车辆使用过程中的GSP检测系统，大大降低车辆丢失风险。更低的押金体系进一步拓展了需求面，更保障了合作商的车辆安全。“顶级豪车极速租赁，出行超体验”，一直以来，新威风超跑都致力于以最贴心优质的服务，让用户体验到最顶级的豪华享受。我们秉承着“让豪车走近每一位用户的生活”这一服务理念，未来还将继续优化平台效率，提升服务质量，扩大全国网点，争取做到全国领先品牌，力争走向国际。</string>

</resources>