<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_background_color"
        android:orientation="vertical">

        <include
            android:id="@+id/title_layout"
            layout="@layout/base_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="18dp"
                android:paddingTop="32dp"
                android:paddingRight="18dp"
                android:paddingBottom="160dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="新威风出行租车协议"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha="0.6"
                    android:text="在您预定前，请仔细阅读本协议"
                    android:textColor="#FFC68C"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="甲方权利与义务："
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_a_text1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_a_text2"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_a_text3"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_a_text4"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_a_text5"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_a_text6"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="乙方权利与义务："
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text2"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text3"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text4"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text5"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text6"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text7"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/contract_b_text8"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:alpha="0.6"
                    android:text="@string/contract_text"
                    android:textColor="#FFC68C"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>